--- a/Activity-classification-1.ipynb
+++ b/Activity-classification-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,13 @@
     "    sep=',')\n",
     "\n",
     "# separate names from classes\n",
-    "vals = df.ix[:,:].values\n",
-    "\n",
-    "### FILL IN THE BLANKS ###"
+    "vals = df.loc[:,0]\n",
+    "vals = vals.str.split(n=1)\n",
+    "names = []\n",
+    "cls = []\n",
+    "for v in vals:\n",
+    "    names.append(v[1])\n",
+    "    cls.append(v[0])"
    ]
   },
   {
@@ -61,22 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cmer(name, c=3):\n",
+    "def cmer(name, c):\n",
     "    r\"\"\" Given a name and parameter c, return the vector of c-mers associated with the name\n",
     "    \"\"\"\n",
     "    name = name.lower()\n",
-    "    \n",
-    "    ### FILL IN THE BLANKS ###\n",
-    "    \n",
     "    v = []\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    for i in range(0, len(name)-c+1):\n",
+    "        v.append(name[i:i+c])\n",
     "    return v"
    ]
   },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,10 +184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " [nrows 294, ncols 30, nnz 3054]\n",
+      " [nrows 294, ncols 442, nnz 3739]\n",
+      " [nrows 294, ncols 1695, nnz 3527]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat_c1 = namesToMatrix(names,1)\n",
+    "csr_info(mat_c1)\n",
+    "mat_c2 = namesToMatrix(names,2)\n",
+    "csr_info(mat_c2)\n",
+    "mat_c3 = namesToMatrix(names,3)\n",
+    "csr_info(mat_c3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,11 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def findNeighborsForName(name, c=1, k=1):\n",
+    "def findNeighborsForName(name, c, k):\n",
     "    # first, find the document for the given name\n",
     "    id = -1\n",
     "    for i in range(len(names)):\n",
@@ -232,10 +249,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Michael W. Barley',\n",
+       " 'Michael Redmond',\n",
+       " 'Michael Littman',\n",
+       " 'Michael A. meystel',\n",
+       " 'Michael I. Jordan']"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findNeighborsForName(\"Michael Kearns\",2,5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +308,7 @@
     "\n",
     "    return train, clstr, test, clste\n",
     "    \n",
-    "def classifyNames(names, cls, c=3, k=3, d=10):\n",
+    "def classifyNames(names, cls, c, k, d=10):\n",
     "    r\"\"\" Classify names using c-mer frequency vector representations of the names and kNN classification with \n",
     "    cosine similarity and 10-fold cross validation\n",
     "    \"\"\"\n",
@@ -329,6 +363,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy when c = 1 and k = 1 is 0.619167\n",
+      "Accuracy when c = 1 and k = 2 is 0.619167\n",
+      "Accuracy when c = 1 and k = 3 is 0.665000\n",
+      "Accuracy when c = 1 and k = 4 is 0.663333\n",
+      "Accuracy when c = 1 and k = 5 is 0.680000\n",
+      "Accuracy when c = 1 and k = 6 is 0.675833\n",
+      "Accuracy when c = 2 and k = 1 is 0.730833\n",
+      "Accuracy when c = 2 and k = 2 is 0.730833\n",
+      "Accuracy when c = 2 and k = 3 is 0.747500\n",
+      "Accuracy when c = 2 and k = 4 is 0.750833\n",
+      "Accuracy when c = 2 and k = 5 is 0.716667\n",
+      "Accuracy when c = 2 and k = 6 is 0.743333\n",
+      "Accuracy when c = 3 and k = 1 is 0.800833\n",
+      "Accuracy when c = 3 and k = 2 is 0.800833\n",
+      "Accuracy when c = 3 and k = 3 is 0.750833\n",
+      "Accuracy when c = 3 and k = 4 is 0.764167\n",
+      "Accuracy when c = 3 and k = 5 is 0.749167\n",
+      "Accuracy when c = 3 and k = 6 is 0.750000\n",
+      "Accuracy when c = 4 and k = 1 is 0.771667\n",
+      "Accuracy when c = 4 and k = 2 is 0.779167\n",
+      "Accuracy when c = 4 and k = 3 is 0.745000\n",
+      "Accuracy when c = 4 and k = 4 is 0.746667\n",
+      "Accuracy when c = 4 and k = 5 is 0.745000\n",
+      "Accuracy when c = 4 and k = 6 is 0.733333\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.array([1,2,3,4])\n",
+    "k = np.array([1,2,3,4,5,6])\n",
+    "for i in c:\n",
+    "    for j in k:\n",
+    "        acc = classifyNames(names, cls, i, j)\n",
+    "        print(\"Accuracy when c = %d and k = %d is %f\"% (i,j,acc))\n",
+    "\n",
+    "# Highest accuracy of 0.800833 is achieved when c=3 and k=1 or k=2 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -352,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
